--- a/src/main/webapp/stylesheets/main.css
+++ b/src/main/webapp/stylesheets/main.css
@@ -6,62 +6,6 @@ body {
     padding: 0px;
 }
 
-#main {
-    width: 100%;
-    display: block;
-}
-
-#map_canvas {
-    margin: 0 auto;
-    padding: 0;
-    height: 600px;
-    width: 1024px;
-    display: block;
-    border: 5px solid #eeeeee;
-    /* CSS3 Box Shadow */
-    -moz-box-shadow: 2px 2px 5px #333333;
-    -webkit-box-shadow: 2px 2px 5px #333333;
-    box-shadow: 2px 2px 5px #333333;
-}
-
-#marker_box {
-    display: block;
-    overflow: hidden;
-    width: 70px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border: 1px solid #DF7401;
-    /* CSS3 Box Shadow */
-    -moz-box-shadow: 3px 3px 5px #333333;
-    -webkit-box-shadow: 3px 3px 5px #333333;
-    box-shadow: 3px 3px 5px #333333;
-}
-
-#profile_pic {
-    display: block;
-    overflow: hidden;
-    width: 50px;
-    height: 50px;
-    border: 10px solid #DF7401;
-    border-bottom: 5px solid #DF7401;
-    float: left;
-}
-
-#profile_name {
-    display: block;
-    width: 60px;
-    background-color: #DF7401;
-    float: left;
-    clear: left;
-    border: 5px solid #DF7401;
-    border-top: 0px;
-    text-align: center;
-    font-size: 10px;
-    font-weight: bold;
-    color: #FFF;
-}
-
 nav {
     padding: 0;
     margin-bottom: 10px;
@@ -132,6 +76,94 @@ nav #menu ul li #pic a div {
     -webkit-border-radius: 28px;
     -moz-border-radius: 28px;
     float:left;
+}
+
+#main {
+    width: 100%;
+    display: block;
+}
+
+#main #map_canvas {
+    display: block;
+    background-color: #FFF;
+    margin: 0 auto;
+    padding: 0;
+    height: 600px;
+    width: 1024px;
+    border: 5px solid #eeeeee;
+    -moz-box-shadow: 2px 2px 5px #333333;
+    -webkit-box-shadow: 2px 2px 5px #333333;
+    box-shadow: 2px 2px 5px #333333;
+}
+
+#main #map_canvas #loading_outer {
+    display: table-cell;
+    margin: 0 auto;
+    padding: 0;
+    height: 600px;
+    width: 1024px;
+    vertical-align: middle;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#main #map_canvas #loading_outer #loading {
+    display: inline-block;
+    width: 350px;
+    height: 100px;
+    font-size: 15px;
+    color: #DF7401;
+}
+
+#main #map_canvas #loading_outer #loading img {
+    border: 0;
+    display: block;
+    margin: 0 auto;
+    padding-top: 10px;
+}
+
+#main #map_canvas #loading_outer #loading p {
+    font-size: 18px;
+    text-align: center;
+    text-shadow: 1px 1px 1px #000;
+}
+
+#marker_box {
+    display: block;
+    overflow: hidden;
+    width: 70px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border: 1px solid #DF7401;
+    /* CSS3 Box Shadow */
+    -moz-box-shadow: 3px 3px 5px #333333;
+    -webkit-box-shadow: 3px 3px 5px #333333;
+    box-shadow: 3px 3px 5px #333333;
+}
+
+#marker_box #profile_pic {
+    display: block;
+    overflow: hidden;
+    width: 50px;
+    height: 50px;
+    border: 10px solid #DF7401;
+    border-bottom: 5px solid #DF7401;
+    float: left;
+}
+
+#marker_box #profile_name {
+    display: block;
+    width: 60px;
+    background-color: #DF7401;
+    float: left;
+    clear: left;
+    border: 5px solid #DF7401;
+    border-top: 0px;
+    text-align: center;
+    font-size: 10px;
+    font-weight: bold;
+    color: #FFF;
 }
 
 footer {
@@ -216,6 +248,8 @@ footer #copyright a {
 #sigin_info #info a:hover {
     background: #A4A4A4;
 }
+
+
 
 
 
