--- a/src/main/webapp/stylesheets/main.css
+++ b/src/main/webapp/stylesheets/main.css
@@ -56,7 +56,7 @@ nav #menu ul li #logout a {
     text-align: center;
     line-height: 50px;
     padding: 5px;
-    float:right;
+    float: right;
 }
 
 nav #menu ul li #logout a:hover {
@@ -75,12 +75,26 @@ nav #menu ul li #pic a div {
     border-radius: 28px;
     -webkit-border-radius: 28px;
     -moz-border-radius: 28px;
-    float:left;
+    float: left;
 }
 
 #main {
     width: 100%;
     display: block;
+}
+
+#main #notlocated {
+    display: none;
+    text-align: center;
+}
+
+#main #notlocated a {
+    color: #DF7401;
+    text-decoration: none;
+}
+
+#main #notlocated a:hover{
+    color: #EEEEEE;
 }
 
 #main #map_canvas {
@@ -249,7 +263,74 @@ footer #copyright a {
     background: #A4A4A4;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    border: 2px solid #ccc;
+}
 
+tbody, tr, td {
+    display: block;
+}
 
+tr {
+    background-color: #D8D8D8;
+    border-bottom: 2px solid #FFF;
+    margin: 0 auto;
+}
+
+tr:after {
+    content: ' ';
+    display: block;
+    visibility: hidden;
+    clear: both;
+}
+
+tbody {
+    height: 250px;
+    overflow-y: auto;
+}
+
+tbody td {
+    height: 60px;
+    width: 10%;
+    float: left;
+}
+
+tbody td img {
+    margin: 1px;
+}
+
+tbody td div {
+    display: block;
+    margin: 1px;
+    margin-right: 10px;
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+    border: 4px solid #eeeeee;
+    border-radius: 28px;
+    -webkit-border-radius: 28px;
+    -moz-border-radius: 28px;
+    float: left;
+}
+
+tbody td span {
+    display: table-cell;
+    height: 60px;
+    vertical-align: middle;
+}
+
+tbody td span a {
+    border:  0;
+    text-decoration: none;
+}
+
+tbody td:last-child {
+    width: 80%;
+    border-right: none;
+}
 
 
